$Id$

2.1.1-pre-3
	Filters of filters now work.
	Removed the "possibly not readable" part of the config parsing
  	  error
	In the sepbar, reverse video the view name when it's not set to
	  view_home (as opposed to the static 'all').
	The '!' key (bound to 'view -r') now creates a negative version of
	  the current view and switches to it.  i.e. "show me all the
	  messages that are not these"
	
2.1.1-pre-2
	Added the 'aim search' command.  The popup on callback may be
	  dangerous, should switch to an admin msg for results, or add a
	  new event queue
	First pass at AIM away messages.  It is a little different from
	  what most clients seem to do, in that an away reply is sent for
	  each message received.  Most clients only reply to the first one
	  per away-session.
	Now have a set of 'aaway' commands and variables just like the
	  'zaway' ones (except that changing the 'aaway' variable talks to
	  the server)
	The new 'away' command does everything for both AIM *and* zephyr.
	  There is a known funkiness here, where if you turn one away on,
	  and then use 'away' (or 'A') to toggle, you will turn on off and
	  the other on.  Just leaving it for now.  Should do better in the
	  next patch.
	The 'A' key is bound to 'away'
	Status bar can now read AWAY, Z-AWAY or A-AWAY.
	Changed C-n to scroll down just a line in popless
	If the config exists but is not readable, print an error before
	  exiting
 	
2.1.1-pre-1
	Only print forced AIM logout message once.
	Don't bind F1 to help in edit context
	Fix bug in 'getsubs' with no tickets
	New code for getting users from .anyfile
	Added the 'pseudologins' variable, and code to do it
	new attributes 'pseudo' 'logintty' and 'loginhost'
	Don't print extra new lines in popless_file
	New zephyr_get_field function
	
2.0.14
	Fixed missing word in startup message
	Better 'status' command
	Use '+' for popwin corners when 'fancylines' is off
	Allow TERMINFO to be overridden in the envrionment