@@ -142,6 +142,12 @@ static owl_variable variables_to_init[] = {
 	       "but sent no login message, or a user is not present that sent no\n"
 	       "logout message a pseudo login or logout message wil be created\n"),
 
+  OWLVAR_BOOL( "ignorelogins" /* %OwlVarStub */, 0,
+	       "Enable printing of login notifications",
+	       "When this is enabled, Owl will print login and logout notifications\n"
+	       "and AIM, zephyr, or other protocols.  If disabled Owl will not print\n"
+	       "login or logout notifications\n"),
+
   OWLVAR_ENUM_FULL( "disable-ctrl-d" /* %OwlVarStub:lockout_ctrld */, 1,
 		    "don't send zephyrs on C-d",
 		    "If set to 'off', C-d won't send a zephyr from the edit\n"
